--- a/views/about.html
+++ b/views/about.html
@@ -28,25 +28,37 @@
 		<div class="row">
 			<div class="col-md-10 col-md-offset-1">
 				<div class="row first-block">
-					<div class="col-md-6 abt-img">
-						<img class="abt-img" src="../img/about-first.jpg">
+					<div class="col-md-6 col-sm-12 abt-img">
+						<img src="../img/about-first.jpg">
 					</div>
 
-					<div class="col-md-6 abt-text">
+					<div class="col-md-6 col-md-offset-0  col-sm-10 col-sm-offset-1 abt-text">
 						<p class="centered">Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации "Здесь ваш текст.. Здесь ваш текст..Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. </p>
 					</div>
 
 					
 				</div>
 
-				<div class="row second-block">
-					<div class="col-md-6 abt-text">
+				<div class="row second-block hidden-sm">
+					<div class="col-md-6 col-md-offset-0 col-sm-10 col-sm-offset-1 abt-text">
 						<p class="centered">Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации "Здесь ваш текст.. Здесь ваш текст..</p>
 					</div>
 
-					<div class="col-md-6 abt-img">
-						<img class="abt-img" src="../img/about-first.jpg">
+					<div class="col-md-6 col-sm-12 abt-img">
+						<img src="../img/about-first.jpg">
 					</div>
+				</div>
+
+				<div class="row second-block visible-sm">
+					<div class="col-md-6 col-sm-12 abt-img">
+						<img src="../img/about-first.jpg">
+					</div>
+					
+					<div class="col-md-6 col-md-offset-0 col-sm-10 col-sm-offset-1 abt-text">
+						<p class="centered">Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации "Здесь ваш текст.. Здесь ваш текст..</p>
+					</div>
+
+					
 				</div>
 			</div>
 		</div>
