--- a/views/about.html
+++ b/views/about.html
@@ -39,7 +39,7 @@
 					
 				</div>
 
-				<div class="row second-block hidden-sm">
+				<div class="row second-block hidden-xs">
 					<div class="col-md-6 col-md-offset-0 col-sm-10 col-sm-offset-1 abt-text">
 						<p class="centered">Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации "Здесь ваш текст.. Здесь ваш текст..</p>
 					</div>
@@ -49,11 +49,11 @@
 					</div>
 				</div>
 
-				<div class="row second-block visible-sm">
+				<div class="row second-block visible-xs">
 					<div class="col-md-6 col-sm-12 abt-img">
 						<img src="../img/about-first.jpg">
 					</div>
-					
+
 					<div class="col-md-6 col-md-offset-0 col-sm-10 col-sm-offset-1 abt-text">
 						<p class="centered">Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации "Здесь ваш текст.. Здесь ваш текст..</p>
 					</div>
