--- a/views/about.html
+++ b/views/about.html
@@ -17,7 +17,7 @@
 				<li></li>
 			</ul>
 			
-			<button class="btn btn-danger navbar-btn pull-right">Обратная связь</button>
+			<button type="button" class="btn btn-danger navbar-btn pull-right" data-toggle="modal" data-target="#modalForm">Обратная связь</button>
 		</div>
 	</div>
 </div>
